     CallerIDNum is used for number and CallerIDName for name.
  * enable https support for builtin web server.
     See configs/http.conf.sample for details.
  * Added a new action, GetConfigJSON, which can return the contents of an
    Asterisk configuration file in JSON format.  This is intended to help
    improve the performance of AJAX applications using the manager interface
    over HTTP.

Dialplan functions
------------------
  * Added the DEVSTATE() dialplan function which allows retrieving any device
    state in the dialplan, as well as creating custom device states that are
    controllable from the dialplan.
  * Extend CALLERID() function with "pres" and "ton" parameters to
     fetch string representation of calling number presentation indicator
     and numeric representation of type of calling number value.
  * MailboxExists converted to dialplan function

CLI Changes
-----------
  * New CLI command "core show settings"
  * Added 'core show channels count' CLI command.

SIP changes
-----------
  * The default SIP useragent= identifier now includes the Asterisk version
  * A new option, match_auth_username in sip.conf changes the matching of incoming requests.
     If set, and the incoming request carries authentication info,
     the username to match in the users list is taken from the Digest header
     rather than from the From: field. This feature is considered experimental.
  * The "musiconhold" and "musicclass" settings in sip.conf are now removed,
     since they where replaced by "mohsuggest" and "mohinterpret" in version 1.4
  * The "localmask" setting was removed in version 1.2 and the reminder about it
     being removed is now also removed.
  * A new option "busy-level" for setting a level of calls where asterisk reports
     a device as busy, to separate it from call-limit
  * A new realtime family called "sipregs" is now supported to store SIP registration